step5 : add template engine feature (prototype)